# TEST

./: .gitignore  AGENTS.md  Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs  prelude.rs
src/game/: mod.rs  plugin.rs  states.rs
src/game/camera/: components.rs  mod.rs  plugins.rs  systems.rs
src/game/grapple/: mod.rs  systems.rs
src/game/input/: actions.rs  components.rs  mod.rs  plugin.rs  systems.rs
src/game/physics/: components.rs  config.rs  mod.rs  plugin.rs  systems.rs
src/game/player/: abilities.rs  components.rs  mod.rs  plugins.rs  systems.rs
src/game/setup/: functions.rs  mod.rs  systems.rs
src/game/ui/: components.rs  main_menu.rs  mod.rs  pause_menu.rs  plugin.rs  plugins.rs  systems.rs
