[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2021"

[features]
debug = ["bevy/debug"]

[dependencies]
bevy = { version = "0.18", features = ["bevy_core_pipeline"] }
avian3d = "0.6"
serde = { version = "1", features = ["derive"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
fastrand = "2.1"
univis_ui = "0.2.0-alpha.1"
leafwing-input-manager = "0.20.0"
leafwing_abilities = "0.12.0"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1
features = ["debug"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = "abort"
debug = 0
strip = "debuginfo"

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1
